--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,17 @@
   --text-color: #ffffff;
   --button-color: #000000;
   --text-outline-color: #000000;
+  --border-color: #0000004f;
+}
+
+#nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  padding: 20px;
+  background-color: var(--header-color);
+  box-shadow: 0 3px 6px var(--border-color);
+  color: var(--text-color);
 }
