--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --button-color: #000000;
   --text-outline-color: #000000;
   --border-color: #0000004f;
+  --outline-color: #000000;
 }
 
 #nav-bar {
@@ -19,4 +20,94 @@
   background-color: var(--header-color);
   box-shadow: 0 3px 6px var(--border-color);
   color: var(--text-color);
+}
+
+#left {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+#troll {
+  height: auto;
+  width: 100%;
+  max-width: 60px;
+}
+
+#input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin: 40px;
+}
+
+#row-1 {
+  display: flex;
+  gap: 20px;
+  width: 100%;
+}
+
+#top-text, #bottom-text {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid var(--border-color);
+  border-radius: 6px;
+  font-size: 1rem;
+}
+
+#btn-parent {
+  width: 100%;
+}
+
+#get-meme {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  width: 100%;
+  padding-block: 12px;
+  font-size: 1rem;
+  font-weight: 600;
+  border: 1px solid var(--border-color);
+  border-radius: 6px;
+}
+
+#get-meme:hover {
+  filter: brightness(80%);
+}
+
+#display-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: fit-content;
+  width: 100%;
+}
+
+#display-container img {
+  height: auto;
+  width: 100%;
+  max-width: 450px;
+}
+
+.top-meme-text, .bottom-meme-text {
+  font-size: 2rem;
+  color: var(--text-color);
+  text-shadow:
+       3px 3px 0 #000,
+     -1px -1px 0 #000,  
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+       1px 1px 0 #000;
+}
+
+.top-meme-text {
+  position: relative;
+  bottom: 400px;
+}
+
+.bottom-meme-text {
+  position: relative;
+  bottom: 130px;
 }
