--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,7 @@
 
 #btn-parent {
   width: 100%;
+  padding: 10px 40px 10px 40px;
 }
 
 #get-meme {
@@ -70,7 +71,7 @@
   font-size: 1rem;
   font-weight: 600;
   border: 1px solid var(--border-color);
-  border-radius: 6px;
+  border-radius: 6px; 
 }
 
 #get-meme:hover {
@@ -83,6 +84,7 @@
   align-items: center;
   height: fit-content;
   width: 100%;
+  padding: 20px 40px 20px 40px;
 }
 
 #display-container img {
