--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  --header-color: #000000;
+  --header-color: #272727;
   --text-color: #ffffff;
-  --button-color: #000000;
-  --text-outline-color: #000000;
-  --border-color: #0000004f;
-  --outline-color: #000000;
+  --button-color: #272727;
+  --text-outline-color: #272727;
+  --border-color: #272727;
+  --outline-color: #272727;
+}
+
+.content {
+  padding: 20px;
 }
 
 #nav-bar {
@@ -16,6 +20,8 @@
   align-items: center;
   position: sticky;
   top: 0;
+  z-index: 1;
+  margin-bottom: 15px;
   padding: 20px;
   background-color: var(--header-color);
   box-shadow: 0 3px 6px var(--border-color);
@@ -39,7 +45,6 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  margin: 40px;
 }
 
 #row-1 {
@@ -49,6 +54,7 @@
 }
 
 #top-text, #bottom-text {
+  height: 50px;
   width: 100%;
   padding: 10px;
   border: 1px solid var(--border-color);
@@ -58,7 +64,8 @@
 
 #btn-parent {
   width: 100%;
-  padding: 10px 40px 10px 40px;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 #get-meme {
@@ -72,6 +79,8 @@
   font-weight: 600;
   border: 1px solid var(--border-color);
   border-radius: 6px; 
+  background-color: var(--header-color);
+  color: var(--text-color);
 }
 
 #get-meme:hover {
@@ -81,20 +90,20 @@
 #display-container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  height: fit-content;
+  aspect-ratio: 1;
   width: 100%;
+  max-width: 500px;
+  margin: 20px auto;
   padding: 20px 40px 20px 40px;
-}
-
-#display-container img {
-  height: auto;
-  width: 100%;
-  max-width: 450px;
+  border: 1px solid var(--border-color);
+  border-radius: 6px;
+  background-size: 100% 100%;
 }
 
 .top-meme-text, .bottom-meme-text {
-  font-size: 2rem;
+  font-size: 3rem;
   color: var(--text-color);
   text-shadow:
        3px 3px 0 #000,
@@ -102,14 +111,4 @@
       1px -1px 0 #000,
       -1px 1px 0 #000,
        1px 1px 0 #000;
-}
-
-.top-meme-text {
-  position: relative;
-  bottom: 400px;
-}
-
-.bottom-meme-text {
-  position: relative;
-  bottom: 130px;
 }
