--- a/src/App.css
+++ b/src/App.css
@@ -42,20 +42,14 @@
 
 #input-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
   gap: 20px;
-}
-
-#row-1 {
-  display: flex;
-  gap: 20px;
-  width: 100%;
 }
 
 #top-text, #bottom-text {
   height: 50px;
   width: 100%;
+  max-width: 390px;
   padding: 10px;
   border: 1px solid var(--border-color);
   border-radius: 6px;
@@ -63,6 +57,8 @@
 }
 
 #btn-parent {
+  display: flex;
+  justify-content: center;
   width: 100%;
   margin-top: 20px;
   margin-bottom: 40px;
@@ -74,6 +70,7 @@
   justify-content: center;
   gap: 5px;
   width: 100%;
+  max-width: 800px;
   padding-block: 12px;
   font-size: 1rem;
   font-weight: 600;
@@ -94,7 +91,7 @@
   align-items: center;
   aspect-ratio: 1;
   width: 100%;
-  max-width: 500px;
+  max-width: 800px;
   margin: 20px auto;
   padding: 20px 40px 20px 40px;
   border: 1px solid var(--border-color);
